refactor: split generateExplanation function - part 2